@@ -5,5 +5,9 @@ end
 gemfile <<-RB
   gem 'padrino', '~> 0.11.0'
   gem 'rack-test', :require => 'rack/test'
-  gem 'mocha'
+RB
+
+gemfile <<-RB
+  gem 'padrino', '~> 0.10.0'
+  gem 'rack-test', :require => 'rack/test'
 RB
