@@ -15,6 +15,10 @@ class PadrinoTestApp < Padrino::Application
   get '/user/login' do
     "please log in"
   end
+
+  get /\/regex.*/ do
+    "with extra regex's please!"
+  end
 end
 
 class PadrinoRoutesTest < Test::Unit::TestCase
@@ -28,7 +32,7 @@ class PadrinoRoutesTest < Test::Unit::TestCase
     ::NewRelic::Agent.manual_start
   end
 
-  def test_lower_priority_route_conditions_arent_applied_to_higher_priority_routes
+  def test_basic_route
     get '/user/login'
     assert_equal 200, last_response.status
     assert_equal 'please log in', last_response.body
@@ -36,5 +40,15 @@ class PadrinoRoutesTest < Test::Unit::TestCase
     assert_metrics_recorded([
         "Controller/Sinatra/PadrinoTestApp/GET user/login",
         "Apdex/Sinatra/PadrinoTestApp/GET user/login"])
+  end
+
+  def test_regex_route
+    get '/regexes'
+    assert_equal 200, last_response.status
+    assert_equal "with extra regex's please!", last_response.body
+
+    assert_metrics_recorded([
+        "Controller/Sinatra/PadrinoTestApp/GET regex.*",
+        "Apdex/Sinatra/PadrinoTestApp/GET regex.*"])
   end
 end
